Update and rename bootstrap.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>lesson</title>
-	<link rel="stylesheet" href="bootstrap.css">
+	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.7.3/glider.min.css" integrity="sha256-o2HrB5EL5AdkNI2+9n8NzI0p6VflIDQiimYGrayGE30=" crossorigin="anonymous" />
@@ -343,7 +343,7 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js" integrity="sha256-ABrLsV2caVEMCBfm3eNhv/CYQG+tGCqzw2f4b/Pag0M=" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TimelineMax.min.js" integrity="sha256-v/YsEqWkVsiNHryCWg+vjC/eDBakMAgOsCJRa0kNPOg=" crossorigin="anonymous"></script>
-	<script src="lesson.js"></script>
+	<script src="index.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/glider-js/1.7.3/glider.min.js" integrity="sha256-bsmGLdehedS+JVWKTig7vYCCqHOd8sW/mtEkENU1FfI=" crossorigin="anonymous"></script>
 
 	<script>
