--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</div>
 		</div>
 		<div class="nav1-div3">
-			<img class="header-img2" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/add.png">
+			<img class="header-img2" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/add.PNG">
 		</div>
 	</nav>
 	<main>
@@ -82,14 +82,14 @@
 			</div>
 			<div class="section1-div2">
 				<figure>
-					<img class="img2" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/2.jpg" >
+					<img class="img2" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/2.JPG" >
 				    <figcaption class="sect1-figcap2">
 				    	<p>June 20, 2018</p>
 					    <a href="#">The Best Way To Spend Your Weekend</a>
 				    </figcaption>
 				</figure>
 				<figure>
-					<img class="img2" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/3.jpg">
+					<img class="img2" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/3.JPG">
 				    <figcaption class="sect1-figcap2">
 				    	<p>June 20, 2018</p>
 						<a href="#">Sport Results For The weekend</a>
@@ -111,7 +111,7 @@
 					</div>
 					<div class="s2-d-d1-d2">
 						<figure>
-							<img class="figimg" name="s2img1" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/14.jpg">
+							<img class="figimg" name="s2img1" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/14.JPG">
 							<figcaption>
 								<p class="fig-p">June 20,2018</p>
 								<a href=""><h2>Elon Musk: Tesla worker admitted to sabotage</h2></a>
@@ -119,7 +119,7 @@
 							</figcaption>
 						</figure>
 						<figure >
-							<img class="figimg" name="s2img2" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/15.jpg">
+							<img class="figimg" name="s2img2" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/15.JPG">
 							<figcaption>
 								<p class="fig-p">June 20,2018</p>
 								<a href=""><h2>Rachel Sm ith breaks down while discussing border crisis</h2></a>
@@ -131,21 +131,21 @@
 						<div class="s2-d2-d">
 							<div class="s2-d2-d-d1">
 								<div class="s2-d2-d-d1-d">
-									<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/16.jpg">
+									<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/16.JPG">
 									<div>
 										<p>June 20,2018</p>
 										<a href=""><h2>Nearly a quarter have no emergency savings</h2></a>
 									</div>
 								</div>
 								<div class="s2-d2-d-d1-d">
-									<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/18.jpg">
+									<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/18.JPG">
 									<div>
 										<p>June 20,2018</p>
 										<a href=""><h2>Top bitcoin exchange says over $30 million stolen</h2></a>
 									</div>
 							    </div>
 							    <div class="s2-d2-d-d1-d">
-							    	<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/20.jpg">
+							    	<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/20.JPG">
 									<div>
 										<p>June 20,2018</p>
 										<a href=""><h2>Dow falls 287 points as trade war fears escalate</h2></a>
@@ -154,21 +154,21 @@
 							</div>
 							<div class="s2-d2-d-d1">
 								<div class="s2-d2-d-d1-d">
-									<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/17.jpg">
+									<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/17.JPG">
 									<div>
 										<p>June 20,2018</p>
 										<a href=""><h2>Nearly a quarter have no emergency savings</h2></a>
 									</div>
 								</div>
 								<div class="s2-d2-d-d1-d">
-									<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/19.jpg">
+									<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/19.JPG">
 									<div>
 										<p>June 20,2018</p>
 										<a href=""><h2>Top bitcoin exchange says over $30 million stolen</h2></a>
 									</div>
 							    </div>
 							    <div class="s2-d2-d-d1-d">
-							    	<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/21.jpg">
+							    	<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/21.JPG">
 									<div>
 										<p>June 20,2018</p>
 										<a href=""><h2>Dow falls 287 points as trade war fears escalate</h2></a>
@@ -187,7 +187,7 @@
 				    </div>
 				    <div>
 				    	<a href="">
-							<img class="s2-d2-img" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/add3.png">
+							<img class="s2-d2-img" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/add3.PNG">
 					    </a>
 				    </div>
 				</div>
@@ -207,7 +207,7 @@
 
 			    <div class="glider">
 			    	<figure>
-					    <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/11.jpg">
+					    <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/11.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href="">Elon Musk: Tesla worker admitted to sabotage</a>
@@ -215,7 +215,7 @@
 					</figcaption>
 				    </figure>
 				     <figure>
-					    <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/12.jpg">
+					    <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/12.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href="">Rachel Sm ith breaks down while discussing border crisis</a>
@@ -223,7 +223,7 @@
 					</figcaption>
 				    </figure>
 				    <figure >
-					   <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/13.jpg">
+					   <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/13.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href="">Dow falls 287 points as trade war fears escalate</a>
@@ -231,7 +231,7 @@
 					</figcaption>
 				    </figure>
 				    <figure>
-					    <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/7.jpg">
+					    <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/7.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href="">Elon Musk: Tesla worker admitted to sabotage</a>
@@ -239,7 +239,7 @@
 					</figcaption>
 				    </figure>
 				    <figure>
-					    <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/8.jpg">
+					    <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/8.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href="">Rachel Sm ith breaks down while discussing border crisis</a>
@@ -247,7 +247,7 @@
 					</figcaption>
 				    </figure>
 				    <figure>
-					    <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/9.jpg">
+					    <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/9.JPG">
 					<figcaption class="fig1">
 						<p class="fig-p">June 20,2018</p>
 						<a href="">Dow falls 287 points as trade war fears escalate</a>
@@ -268,7 +268,7 @@
 		<section class="section4">
 			<div class="s4-d">
 				<figure>
-					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/4.jpg">
+					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/4.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href=""><h2>Elon Musk: Tesla worker admitted to sabotage</h2></a>
@@ -276,7 +276,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/5.jpg">
+					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/5.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href=""><h2>Rachel Sm ith breaks down while discussing border crisis</h2></a>
@@ -284,7 +284,7 @@
 					</figcaption>
 				</figure>
 				<figure >
-					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/6.jpg">
+					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/6.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href=""><h2>Dow falls 287 points as trade war fears escalate</h2></a>
@@ -294,7 +294,7 @@
 			</div>
 			<div class="s4-d">
 				<figure>
-					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/7.jpg">
+					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/7.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href=""><h2>Elon Musk: Tesla worker admitted to sabotage</h2></a>
@@ -302,7 +302,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/8.jpg">
+					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/8.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href=""><h2>Rachel Sm ith breaks down while discussing border crisis</h2></a>
@@ -310,7 +310,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/9.jpg">
+					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/9.JPG">
 					<figcaption class="fig1">
 						<p class="fig-p">June 20,2018</p>
 						<a href=""><h2>Dow falls 287 points as trade war fears escalate</h2></a>
@@ -322,12 +322,12 @@
 		    	<button type="button">Load More</button>
 		    </div>
 		    <div class="s4-d3">
-		    	<a href=""><img src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/add2.png"></a>
+		    	<a href=""><img src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/add2.PNG"></a>
 		    </div>
 		    <div class="s4-d4">
 		    </div>
 		    <div class="s4-d5">
-		        <img class="s4-img" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/core-img/logo.png">
+		        <img class="s4-img" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/core-img/logo.PNG">
 		    <div>
 		</section>
 	</main>
