--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="nav1">
 		<div class="nav1-div1">
-			<img src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/core-img/logo.png">
+			<img src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/core-img/logo.PNG">
 			<h1 class="hamburger">&#9776</h1>
 		</div>
 		<div class="nav1-div2">
