--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="nav1">
 		<div class="nav1-div1">
-			<img src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/core-img/logo.PNG">
+			<img src="https://res.cloudinary.com/hamskid/image/upload/v1595201435/second-repo/logo_hfmusi.PNG">
 			<h1 class="hamburger">&#9776</h1>
 		</div>
 		<div class="nav1-div2">
@@ -61,7 +61,7 @@
 			</div>
 		</div>
 		<div class="nav1-div3">
-			<img class="header-img2" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/add.PNG">
+			<img class="header-img2" src="https://res.cloudinary.com/hamskid/image/upload/v1595201432/second-repo/add_wqnjrh.PNG">
 		</div>
 	</nav>
 	<main>
@@ -73,7 +73,7 @@
 		<section class="section1">
 			<div class="section1-div1">
 				<figure>
-					<img class="img3" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/1.jpg">
+					<img class="img3" src="https://res.cloudinary.com/hamskid/image/upload/v1595201442/second-repo/1_ibqhx7.JPG">
 					<figcaption class="sect1-figcap1">
 						<p>June 20, 2018</p>
 						<a href="#">Traffic Prblems In Time Of Square</a>
@@ -82,14 +82,14 @@
 			</div>
 			<div class="section1-div2">
 				<figure>
-					<img class="img2" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/2.JPG" >
+					<img class="img2" src="https://res.cloudinary.com/hamskid/image/upload/v1595201418/second-repo/2_ahf4tx.JPG" >
 				    <figcaption class="sect1-figcap2">
 				    	<p>June 20, 2018</p>
 					    <a href="#">The Best Way To Spend Your Weekend</a>
 				    </figcaption>
 				</figure>
 				<figure>
-					<img class="img2" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/3.JPG">
+					<img class="img2" src="https://res.cloudinary.com/hamskid/image/upload/v1595201420/second-repo/3_ugzuz5.JPG">
 				    <figcaption class="sect1-figcap2">
 				    	<p>June 20, 2018</p>
 						<a href="#">Sport Results For The weekend</a>
@@ -111,7 +111,7 @@
 					</div>
 					<div class="s2-d-d1-d2">
 						<figure>
-							<img class="figimg" name="s2img1" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/14.JPG">
+							<img class="figimg" name="s2img1" src=https://res.cloudinary.com/hamskid/image/upload/v1595201430/second-repo/15_j2osix.JPG">
 							<figcaption>
 								<p class="fig-p">June 20,2018</p>
 								<a href=""><h2>Elon Musk: Tesla worker admitted to sabotage</h2></a>
@@ -119,7 +119,7 @@
 							</figcaption>
 						</figure>
 						<figure >
-							<img class="figimg" name="s2img2" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/15.JPG">
+							<img class="figimg" name="s2img2" src="https://res.cloudinary.com/hamskid/image/upload/v1595201419/second-repo/7_qyjgqs.JPG">
 							<figcaption>
 								<p class="fig-p">June 20,2018</p>
 								<a href=""><h2>Rachel Sm ith breaks down while discussing border crisis</h2></a>
@@ -131,21 +131,21 @@
 						<div class="s2-d2-d">
 							<div class="s2-d2-d-d1">
 								<div class="s2-d2-d-d1-d">
-									<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/16.JPG">
+									<img class="img4" src="https://res.cloudinary.com/hamskid/image/upload/v1595201423/second-repo/21_jnfgbf.JPG">
 									<div>
 										<p>June 20,2018</p>
 										<a href=""><h2>Nearly a quarter have no emergency savings</h2></a>
 									</div>
 								</div>
 								<div class="s2-d2-d-d1-d">
-									<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/18.JPG">
+									<img class="img4" src="https://res.cloudinary.com/hamskid/image/upload/v1595201422/second-repo/17_sfqtng.JPG">
 									<div>
 										<p>June 20,2018</p>
 										<a href=""><h2>Top bitcoin exchange says over $30 million stolen</h2></a>
 									</div>
 							    </div>
 							    <div class="s2-d2-d-d1-d">
-							    	<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/20.JPG">
+							    	<img class="img4" src="https://res.cloudinary.com/hamskid/image/upload/v1595201423/second-repo/19_ddmeat.JPG">
 									<div>
 										<p>June 20,2018</p>
 										<a href=""><h2>Dow falls 287 points as trade war fears escalate</h2></a>
@@ -154,21 +154,21 @@
 							</div>
 							<div class="s2-d2-d-d1">
 								<div class="s2-d2-d-d1-d">
-									<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/17.JPG">
+									<img class="img4" src="https://res.cloudinary.com/hamskid/image/upload/v1595201436/second-repo/24_ihlw39.JPG">
 									<div>
 										<p>June 20,2018</p>
 										<a href=""><h2>Nearly a quarter have no emergency savings</h2></a>
 									</div>
 								</div>
 								<div class="s2-d2-d-d1-d">
-									<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/19.JPG">
+									<img class="img4" src="https://res.cloudinary.com/hamskid/image/upload/v1595201418/second-repo/4_e7tcqr.JPG">
 									<div>
 										<p>June 20,2018</p>
 										<a href=""><h2>Top bitcoin exchange says over $30 million stolen</h2></a>
 									</div>
 							    </div>
 							    <div class="s2-d2-d-d1-d">
-							    	<img class="img4" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/21.JPG">
+							    	<img class="img4" src="https://res.cloudinary.com/hamskid/image/upload/v1595201422/second-repo/13_uxdmf4.JPG">
 									<div>
 										<p>June 20,2018</p>
 										<a href=""><h2>Dow falls 287 points as trade war fears escalate</h2></a>
@@ -187,7 +187,7 @@
 				    </div>
 				    <div>
 				    	<a href="">
-							<img class="s2-d2-img" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/add3.PNG">
+							<img class="s2-d2-img" src="https://res.cloudinary.com/hamskid/image/upload/v1595201434/second-repo/add3_ou0jrl.PNG">
 					    </a>
 				    </div>
 				</div>
@@ -207,7 +207,7 @@
 
 			    <div class="glider">
 			    	<figure>
-					    <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/11.JPG">
+					    <img  src="https://res.cloudinary.com/hamskid/image/upload/v1595201433/second-repo/31_zcnk21.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href="">Elon Musk: Tesla worker admitted to sabotage</a>
@@ -215,7 +215,7 @@
 					</figcaption>
 				    </figure>
 				     <figure>
-					    <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/12.JPG">
+					    <img  src="https://res.cloudinary.com/hamskid/image/upload/v1595201419/second-repo/11_i0wyzh.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href="">Rachel Sm ith breaks down while discussing border crisis</a>
@@ -223,7 +223,7 @@
 					</figcaption>
 				    </figure>
 				    <figure >
-					   <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/13.JPG">
+					   <img  src="https://res.cloudinary.com/hamskid/image/upload/v1595201419/second-repo/12_kxl0k0.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href="">Dow falls 287 points as trade war fears escalate</a>
@@ -231,7 +231,7 @@
 					</figcaption>
 				    </figure>
 				    <figure>
-					    <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/7.JPG">
+					    <img  src="https://res.cloudinary.com/hamskid/image/upload/v1595201422/second-repo/13_uxdmf4.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href="">Elon Musk: Tesla worker admitted to sabotage</a>
@@ -239,7 +239,7 @@
 					</figcaption>
 				    </figure>
 				    <figure>
-					    <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/8.JPG">
+					    <img  src="https://res.cloudinary.com/hamskid/image/upload/v1595201442/second-repo/22_oidvgl.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href="">Rachel Sm ith breaks down while discussing border crisis</a>
@@ -247,7 +247,7 @@
 					</figcaption>
 				    </figure>
 				    <figure>
-					    <img  src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/9.JPG">
+					    <img  src="https://res.cloudinary.com/hamskid/image/upload/v1595201436/second-repo/24_ihlw39.JPG">
 					<figcaption class="fig1">
 						<p class="fig-p">June 20,2018</p>
 						<a href="">Dow falls 287 points as trade war fears escalate</a>
@@ -268,7 +268,7 @@
 		<section class="section4">
 			<div class="s4-d">
 				<figure>
-					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/4.JPG">
+					<img class="figimg" src="https://res.cloudinary.com/hamskid/image/upload/v1595201419/second-repo/7_qyjgqs.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href=""><h2>Elon Musk: Tesla worker admitted to sabotage</h2></a>
@@ -276,7 +276,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/5.JPG">
+					<img class="figimg" src="https://res.cloudinary.com/hamskid/image/upload/v1595201422/second-repo/13_uxdmf4.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href=""><h2>Rachel Sm ith breaks down while discussing border crisis</h2></a>
@@ -284,7 +284,7 @@
 					</figcaption>
 				</figure>
 				<figure >
-					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/6.JPG">
+					<img class="figimg" src="https://res.cloudinary.com/hamskid/image/upload/v1595201417/second-repo/5_y30tty.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href=""><h2>Dow falls 287 points as trade war fears escalate</h2></a>
@@ -294,7 +294,7 @@
 			</div>
 			<div class="s4-d">
 				<figure>
-					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/7.JPG">
+					<img class="figimg" src=https://res.cloudinary.com/hamskid/image/upload/v1595201442/second-repo/22_oidvgl.JPG"">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href=""><h2>Elon Musk: Tesla worker admitted to sabotage</h2></a>
@@ -302,7 +302,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/8.JPG">
+					<img class="figimg" src="https://res.cloudinary.com/hamskid/image/upload/v1595201436/second-repo/24_ihlw39.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href=""><h2>Rachel Sm ith breaks down while discussing border crisis</h2></a>
@@ -310,7 +310,7 @@
 					</figcaption>
 				</figure>
 				<figure>
-					<img class="figimg" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/9.JPG">
+					<img class="figimg" src="https://res.cloudinary.com/hamskid/image/upload/v1595201419/second-repo/11_i0wyzh.JPG">
 					<figcaption class="fig1">
 						<p class="fig-p">June 20,2018</p>
 						<a href=""><h2>Dow falls 287 points as trade war fears escalate</h2></a>
@@ -322,12 +322,12 @@
 		    	<button type="button">Load More</button>
 		    </div>
 		    <div class="s4-d3">
-		    	<a href=""><img src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/bg-img/add2.PNG"></a>
+		    	<a href=""><img src="https://res.cloudinary.com/hamskid/image/upload/v1595201432/second-repo/add_wqnjrh.PNG"></a>
 		    </div>
 		    <div class="s4-d4">
 		    </div>
 		    <div class="s4-d5">
-		        <img class="s4-img" src="file:///C:/Users/mlg29.LAWAL/Desktop/javascript30/newsbox/img/core-img/logo.PNG">
+		        <img class="s4-img" src="https://res.cloudinary.com/hamskid/image/upload/v1595201435/second-repo/logo_hfmusi.PNG">
 		    <div>
 		</section>
 	</main>
