--- a/index.html
+++ b/index.html
@@ -154,21 +154,21 @@
 							</div>
 							<div class="s2-d2-d-d1">
 								<div class="s2-d2-d-d1-d">
-									<img class="img4" src="https://res.cloudinary.com/hamskid/image/upload/v1595201436/second-repo/24_ihlw39.JPG">
+									<img class="img4" src="https://res.cloudinary.com/hamskid/image/upload/v1595203978/second-repo/18_wton1h.JPG">
 									<div>
 										<p>June 20,2018</p>
 										<a href=""><h2>Nearly a quarter have no emergency savings</h2></a>
 									</div>
 								</div>
 								<div class="s2-d2-d-d1-d">
-									<img class="img4" src="https://res.cloudinary.com/hamskid/image/upload/v1595201418/second-repo/4_e7tcqr.JPG">
+									<img class="img4" src="https://res.cloudinary.com/hamskid/image/upload/v1595201423/second-repo/19_ddmeat.JPG">
 									<div>
 										<p>June 20,2018</p>
 										<a href=""><h2>Top bitcoin exchange says over $30 million stolen</h2></a>
 									</div>
 							    </div>
 							    <div class="s2-d2-d-d1-d">
-							    	<img class="img4" src="https://res.cloudinary.com/hamskid/image/upload/v1595201422/second-repo/13_uxdmf4.JPG">
+							    	<img class="img4" src="https://res.cloudinary.com/hamskid/image/upload/v1595201423/second-repo/21_jnfgbf.JPG">
 									<div>
 										<p>June 20,2018</p>
 										<a href=""><h2>Dow falls 287 points as trade war fears escalate</h2></a>
@@ -247,7 +247,7 @@
 					</figcaption>
 				    </figure>
 				    <figure>
-					    <img  src="https://res.cloudinary.com/hamskid/image/upload/v1595201436/second-repo/24_ihlw39.JPG">
+					    <img  src="https://res.cloudinary.com/hamskid/image/upload/v1595201430/second-repo/15_j2osix.JPG">
 					<figcaption class="fig1">
 						<p class="fig-p">June 20,2018</p>
 						<a href="">Dow falls 287 points as trade war fears escalate</a>
@@ -294,7 +294,7 @@
 			</div>
 			<div class="s4-d">
 				<figure>
-					<img class="figimg" src=https://res.cloudinary.com/hamskid/image/upload/v1595201442/second-repo/22_oidvgl.JPG"">
+					<img class="figimg" src=https://res.cloudinary.com/hamskid/image/upload/v1595201442/second-repo/22_oidvgl.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href=""><h2>Elon Musk: Tesla worker admitted to sabotage</h2></a>
