--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 					</div>
 					<div class="s2-d-d1-d2">
 						<figure>
-							<img class="figimg" name="s2img1" src=https://res.cloudinary.com/hamskid/image/upload/v1595201430/second-repo/15_j2osix.JPG">
+							<img class="figimg" name="s2img1" src="https://res.cloudinary.com/hamskid/image/upload/v1595201430/second-repo/15_j2osix.JPG">
 							<figcaption>
 								<p class="fig-p">June 20,2018</p>
 								<a href=""><h2>Elon Musk: Tesla worker admitted to sabotage</h2></a>
@@ -207,7 +207,7 @@
 
 			    <div class="glider">
 			    	<figure>
-					    <img  src="https://res.cloudinary.com/hamskid/image/upload/v1595201433/second-repo/31_zcnk21.JPG">
+					    <img  src="https://res.cloudinary.com/hamskid/image/upload/v1595201421/second-repo/14_qmd5go.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href="">Elon Musk: Tesla worker admitted to sabotage</a>
@@ -294,7 +294,7 @@
 			</div>
 			<div class="s4-d">
 				<figure>
-					<img class="figimg" src=https://res.cloudinary.com/hamskid/image/upload/v1595201442/second-repo/22_oidvgl.JPG">
+					<img class="figimg" src="https://res.cloudinary.com/hamskid/image/upload/v1595201442/second-repo/22_oidvgl.JPG">
 					<figcaption>
 						<p class="fig-p">June 20,2018</p>
 						<a href=""><h2>Elon Musk: Tesla worker admitted to sabotage</h2></a>
