--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				</figure>
 			</div>
 		</section>
-		<section>
+		<section class="section2">
 			<div class="s2-d">
 				<div class="s2-d-d1">
 					<div class="s2-d-d1-d">
