--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 				</figure>
 			</div>
 		</section>
-		<section class="s2-d">
-			
+		<section class="section2">
+			<div class="s2-d">
 				<div class="s2-d-d1">
 					<div class="s2-d-d1-d">
 						<p>ALL THE NEWS</p>
@@ -191,7 +191,7 @@
 					    </a>
 				    </div>
 				</div>
-			
+			</div>
 			
 		</section>
 		<section class="section3">
