--- a/index.html
+++ b/index.html
@@ -359,6 +359,17 @@
 				next:'.glider-next'
 			},
             responsive: [
+		               {
+				// screens greater than >= 300px
+				breakpoint: 300,
+				settings: {
+				// Set to `auto` and provide item width to adjust to viewport
+				slidesToShow:1,
+				slidesToScroll:"auto",
+				itemWidth: 150,
+				duration: 0.25
+				}
+				},
 				{
 				// screens greater than >= 775px
 				breakpoint: 775,
